--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,16 @@
 <resources>
-    <string name="app_name">MisTareas_v2</string>
+    <string name="app_name">Mis Tareas MGC</string>
     <string name="mis_tareas">Mis Tareas</string>
     <string name="imagen">imagen</string>
     <string name="mgc">MGC</string>
     <string name="hint">hint</string>
     <string name="usuario">Usuario</string>
-    <string name="password">password</string>
+    <string name="password">Password</string>
+    <string name="login">LOGIN</string>
+    <string name="crear_cuenta">Crear cuenta</string>
+    <string name="item">Item</string>
+    <string name="cerrar_sesion">Cerrar Sesión</string>
+    <string name="salir">Salir</string>
+    <string name="realizada">Hecho</string>
+
 </resources>
