--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mis Tareas MGC</string>
-    <string name="mis_tareas">Mis Tareas</string>
+    <string name="mis_tareas">Tareas</string>
     <string name="imagen">imagen</string>
     <string name="mgc">MGC</string>
     <string name="hint">hint</string>
@@ -11,7 +11,9 @@
     <string name="item">Item</string>
     <string name="cerrar_sesion">Cerrar Sesión</string>
     <string name="salir">Salir</string>
-    <string name="realizada">Hecho</string>
+    <string name="realizada"></string>
     <string name="ver_historial">Ver historial</string>
+    <string name="mis">Mis</string>
+    <string name="textview">TextView</string>
 
 </resources>
